# A0_TowerDefense

./: README.md
A0_template/A0_template/: CMakeLists.txt  CMakePresets.json  README.md
A0_template/A0_template/src/: ecs_test.cpp
A0_template/A0_template/src/tinyECS/: components.hpp  entity.hpp  tiny_ecs.hpp  trace.h
A0_template/A0_template/tests/: duck.txt  duck_buoyancy.txt  full_test.txt  happy_path.txt
